@@ -1,3 +1,9 @@
+2006-09-10  Aaron Stone  <aaron@serendipity.cx>
+
+	* imapcommands.c:
+	Give parentmboxid an initial value to prevent garbage mailbox ACL
+	lookups.
+
 2006-09-10  Paul J Stevens <paul@nfg.nl>
 
 	* dbmail-imapsession.c:
